# calendar-notifier

./: .gitignore  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml  build.yml
scripts/: install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  config.rs  google.rs  lib.rs  main.rs  scheduler.rs  secrets.rs  store.rs  tray.rs
src/routes/: +page.svelte
