[package]
name = "calendar-notifier"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "calendar_notifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# Usa a integração tokio do zbus (runtime do Tauri) em vez de rodar um reactor
# async-io separado. Ver [patch.crates-io] abaixo p/ o motivo do vendor.
zbus = { version = "5", features = ["tokio"] }

# zbus 5.18.0 (e 5.17.0) tem reborrows inválidos em connection/socket/command.rs
# (transporte "Command", não usado por notificações desktop) que não compilam
# no rustc atual. Vendorizamos e corrigimos as 5 chamadas p/ `&mut *self`.
# Remover quando um zbus > 5.18.0 corrigir o upstream. Só afeta Linux/*BSD.
[patch.crates-io]
zbus = { path = "vendor/zbus-5.18.0" }

