[package]
name = "calendar-notifier"
version = "0.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "calendar_notifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.53.0", features = ["net", "io-util", "time", "rt", "macros", "sync"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
url = "2.5.8"
sha2 = "0.11.0"
base64 = "0.22.1"
getrandom = "0.2"
dirs = "6.0.0"
open = "5.4.0"
anyhow = "1.0.104"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
urlencoding = "2.1.3"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

# Keychain nativo p/ o refresh token (Windows/macOS). No Linux não há Secret
# Service no WSL, então lá usamos o fallback de arquivo 0600 (ver secrets.rs).
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

# zbus 5.18.0 (e 5.17.0) tem reborrows inválidos em connection/socket/command.rs
# (transporte "Command", não usado por notificações desktop) que não compilam
# no rustc atual. Vendorizamos e corrigimos as 5 chamadas p/ `&mut *self`.
# Remover quando um zbus > 5.18.0 corrigir o upstream. Só afeta Linux/*BSD.
[patch.crates-io]
zbus = { path = "vendor/zbus-5.18.0" }


# Perfil de release otimizado para tamanho (reduz o binário; ajuda um pouco a
# memória). O grosso do RSS no Linux é o WebKitGTK, que não dá pra encolher.
[profile.release]
opt-level = "s"     # otimiza para tamanho
lto = true          # link-time optimization
codegen-units = 1   # melhor otimização (build mais lento)
panic = "abort"     # remove o código de unwinding
strip = true        # remove símbolos de debug
